# docs/swagger.json
@@ -1,17 +1,86 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "Using a translation service as an example",
-        "title": "Go Clean Template API",
+        "description": "GO WEBAPP TEMPLATE API",
+        "title": "GO WEBAPP TEMPLATE API",
         "contact": {},
         "version": "1.0"
     },
     "host": "localhost:8080",
-    "basePath": "/v1",
+    "basePath": "/",
     "paths": {
-        "/translation/do-translate": {
+        "/v1/users": {
+            "get": {
+                "description": "List user with pages",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "List users",
+                "operationId": "list-users",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Page number",
+                        "name": "pageNo",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Page size",
+                        "name": "pageSize",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Order asc/desc",
+                        "name": "order",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Order by create_time",
+                        "name": "orderBy",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Username",
+                        "name": "username",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Status 1/2",
+                        "name": "status",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/http.listUserResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/exception.Response"
+                        }
+                    }
+                }
+            },
             "post": {
-                "description": "Translate a text",
+                "description": "Create user, user_id is generated random",
                 "consumes": [
                     "application/json"
                 ],
@@ -19,18 +88,18 @@
                     "application/json"
                 ],
                 "tags": [
-                    "translation"
+                    "user"
                 ],
-                "summary": "Translate",
-                "operationId": "do-translate",
+                "summary": "Create user",
+                "operationId": "create-user",
                 "parameters": [
                     {
-                        "description": "Set up translation",
+                        "description": "Set up user",
                         "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/v1.doTranslateRequest"
+                            "$ref": "#/definitions/http.createUserRequest"
                         }
                     }
                 ],
@@ -38,49 +107,123 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/entity.Translation"
+                            "$ref": "#/definitions/entity.User"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/v1.response"
+                            "$ref": "#/definitions/exception.Response"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/v1.response"
+                            "$ref": "#/definitions/exception.Response"
                         }
                     }
                 }
             }
         },
-        "/translation/history": {
+        "/v1/users/:username": {
             "get": {
-                "description": "Show all translation history",
-                "consumes": [
-                    "application/json"
-                ],
+                "description": "Get user by username",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "translation"
+                    "user"
                 ],
-                "summary": "Show history",
-                "operationId": "history",
+                "summary": "Get user",
+                "operationId": "get-user",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Username",
+                        "name": "username",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/v1.historyResponse"
+                            "$ref": "#/definitions/entity.User"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/v1.response"
+                            "$ref": "#/definitions/exception.Response"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "Update user by username",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Update user",
+                "operationId": "update-user",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "username",
+                        "name": "username",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entity.User"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/exception.Response"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete user by username",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Delete user",
+                "operationId": "delete-user",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Username",
+                        "name": "username",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entity.User"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/exception.Response"
                         }
                     }
                 }
@@ -88,66 +231,109 @@
         }
     },
     "definitions": {
-        "entity.Translation": {
+        "entity.User": {
             "type": "object",
             "properties": {
-                "destination": {
+                "created_at": {
+                    "description": "创建时间",
                     "type": "string",
-                    "example": "en"
+                    "example": "2020-01-01T00:00:00Z"
                 },
-                "original": {
+                "description": {
+                    "description": "备注",
                     "type": "string",
-                    "example": "текст для перевода"
+                    "example": "twfbmbsr"
                 },
-                "source": {
+                "email": {
+                    "description": "邮箱",
                     "type": "string",
-                    "example": "auto"
+                    "example": "xxx@example.com"
                 },
-                "translation": {
+                "status": {
+                    "description": "用户状态，1代表启用，2代表禁用",
+                    "type": "integer",
+                    "example": 1
+                },
+                "updated_at": {
+                    "description": "更新时间",
                     "type": "string",
-                    "example": "text for translation"
+                    "example": "2020-01-01T00:00:00Z"
+                },
+                "username": {
+                    "description": "用户的名称",
+                    "type": "string",
+                    "example": "twfbmbsr"
                 }
             }
         },
-        "v1.doTranslateRequest": {
+        "exception.Response": {
             "type": "object",
-            "required": [
-                "destination",
-                "original",
-                "source"
-            ],
             "properties": {
-                "destination": {
+                "code": {
                     "type": "string",
-                    "example": "en"
+                    "example": "Conflict"
                 },
-                "original": {
-                    "type": "string",
-                    "example": "текст для перевода"
-                },
-                "source": {
-                    "type": "string",
-                    "example": "auto"
-                }
-            }
-        },
-        "v1.historyResponse": {
-            "type": "object",
-            "properties": {
-                "history": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/entity.Translation"
-                    }
-                }
-            }
-        },
-        "v1.response": {
-            "type": "object",
-            "properties": {
-                "error": {
+                "message": {
                     "type": "string",
                     "example": "message"
+                },
+                "requestId": {
+                    "type": "string",
+                    "example": "b5953bf0-9f15-4c42-afb4-1c125b40d7ce"
+                }
+            }
+        },
+        "http.createUserRequest": {
+            "type": "object",
+            "required": [
+                "confirm_password",
+                "email",
+                "password",
+                "username"
+            ],
+            "properties": {
+                "confirm_password": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string",
+                    "maxLength": 140,
+                    "minLength": 0
+                },
+                "email": {
+                    "type": "string",
+                    "maxLength": 64,
+                    "minLength": 0
+                },
+                "password": {
+                    "description": "密码的验证比较复杂，有单独的方法进行验证",
+                    "type": "string"
+                },
+                "username": {
+                    "description": "username 应该是长度1-64位的字母、数字或\"_\"",
+                    "type": "string",
+                    "maxLength": 64,
+                    "minLength": 1
+                }
+            }
+        },
+        "http.listUserResponse": {
+            "type": "object",
+            "properties": {
+                "pageNo": {
+                    "type": "integer"
+                },
+                "pageSize": {
+                    "type": "integer"
+                },
+                "result": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/entity.User"
+                    }
+                },
+                "totalCount": {
+                    "type": "integer"
                 }
             }
         }
