# internal/entity/validation/validator.go
@@ -1,0 +1,13 @@
+package validation
+
+import (
+	"github.com/gin-gonic/gin/binding"
+	"github.com/go-playground/validator/v10"
+)
+
+func BindValidator() {
+	// Register binding
+	if v, ok := binding.Validator.Engine().(*validator.Validate); ok {
+		v.RegisterValidation("username", usernameValidator)
+	}
+}
